--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "webpack --watch",
+    "start": "webpack serve --open",
+    "server": "node server.js",
     "build": "webpack"
   },
   "keywords": [
@@ -14,11 +17,14 @@
   "author": "Vasu789",
   "license": "ISC",
   "devDependencies": {
+    "express": "^4.19.2",
     "html-webpack-plugin": "^5.6.0",
     "sass": "^1.77.4",
     "sass-loader": "^14.2.1",
     "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-middleware": "^7.2.1",
+    "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
     "lodash": "^4.17.21"
