--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "name": "webpack-starter",
   "version": "1.0.0",
-  "description": "A Project To Learn Webpack",
-  "private": true,
+  "description": "Webpack Crash Course",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "webpack --watch",
-    "start": "webpack serve --open",
-    "server": "node server.js",
-    "build": "webpack"
+    "build": "webpack",
+    "dev": "webpack serve"
   },
   "keywords": [
     "Webpack",
@@ -17,16 +15,20 @@
   "author": "Vasu789",
   "license": "ISC",
   "devDependencies": {
-    "express": "^4.19.2",
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.0",
     "sass": "^1.77.4",
     "sass-loader": "^14.2.1",
+    "style-loader": "^4.0.0",
     "webpack": "^5.91.0",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-middleware": "^7.2.1",
     "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "axios": "^1.7.2"
   }
 }
